--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>The best programmer</h1>
-        <img src="D:\StreamAssets\PaxxonYT\Logo\Logo_Paxxon_Transparente.png" alt="">
+        <img src="src/Logo_Paxxon_Transparente.png" alt="">
     </body>
 </html>
 
